# AoC-2022

./: CMakeLists.txt
common/: CMakeLists.txt
common/include/: arg_to_vec.h  file_loader.h
common/src/: arg_to_vec.cc  file_loader.cc
tasks/: CMakeLists.txt
tasks/day_1/: CMakeLists.txt
tasks/day_1/src/: main.cc
tasks/day_10/: CMakeLists.txt
tasks/day_10/src/: main.cc
tasks/day_2/: CMakeLists.txt
tasks/day_2/src/: main.cc
tasks/day_3/: CMakeLists.txt
tasks/day_3/src/: main.cc
tasks/day_4/: CMakeLists.txt
tasks/day_4/src/: main.cc
tasks/day_5/: CMakeLists.txt
tasks/day_5/src/: main.cc
tasks/day_6/: CMakeLists.txt
tasks/day_6/src/: main.cc
tasks/day_7/: CMakeLists.txt
tasks/day_7/src/: main.cc
tasks/day_8/: CMakeLists.txt
tasks/day_8/src/: main.cc
tasks/day_9/: CMakeLists.txt
tasks/day_9/src/: main.cc
